--- a/ccb5/View/Utilitario/AjustarTabelas.resx
+++ b/ccb5/View/Utilitario/AjustarTabelas.resx
@@ -477,94 +477,94 @@
   <data name="btnEmpregado.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAAOwSURBVGhD7ZdbSFNxHMePGRQ9BN2ec1MnUVBEgQUmuMxy
-        rifbpAi6vWj00gVye/AtNku8YF5x3TMKiihdUm8RERT1UJQ9RIVF0E0qygv9f/1+9ju2y69tcnaOe/AL
-        H5D9f5fPzjkbU5vJTGaS/rxwLgEJPs7cKE9OmfLaQpI8obz2HuXN2cTlmRNVlbsc5e6D1w6EJE/o58pj
-        u6e8S5dx+/RGVeYUo9SwLkdI8kRkDb7hr3jHNvCY6QnKF5BIpBghyROxddj7WVXm5vE4a4OfyCwUeBAr
-        RUjyhFSLn5m7PNLaqCpbqSRESPKEVEuoKnsJj7Uu+EE8JckQkjwh1RLj22whHmtdRjy5byQZQpInpFri
-        e2XuEI+1LmNe+6gkQ0jyhFRLjHjsYzzWukgiOpI8IdXq8FjzIy1PJ7zGvEhL0wmvMS/S0nTCa8xPSUkJ
-        EBB2G0Kfw2OtierNqzi4Y/3PdL0B3671P9SF/HIeb37URcfb3xcLoPVIWZRM114HdO8riHotEum862gZ
-        4DxQvfmvebz5wYVD0OuIEiE6dudD557413X+e46z6KLwePNDjxBesXeqz6XiZKaI6ncpuiCWPkJ6VNg9
-        KElNBdXvfs7jrI8KV3RKUlMBZ7TxOOujbrlLJampoPrc1v+Ujgw+RncksVTA3gEeM31R4a0F+Bh8lQQT
-        gc/+Z7yD0/PvZGxUf0UxCUmiElj/SYVdRdyeGYGbLjtcWycKR3G1ENSA28ZtmRXo0ABO4+/+K6sAbjgB
-        +l1/ob+vrAQ4g2dYw+WZl4k3kAJcnnmRZCW4PDPS0r3Fez1U9FgL+p6eb1nxTRKO5BzWUC31NHeVe3iM
-        9QmFnDWPzq4ZHr2UD4QW9MPsYC3cbrWJ4kRfax5kB30TtXrfw7Nrh0/3OKt5rAWpq5uLV7BLF9AhKWJB
-        /SEYPLkwTv5Z22KYHzw8WRfXH/B3as0H5vAWk3LcvxTln4gCLEY4TlTDl/a5k/If2+eB/fj+qBq5H2fT
-        DlNyom4xLhlMLPCPjQ3bYbxjFoy2Z8OGhp1x5wn6B7VjRxfx1jQFtCwt4BuIWJJIYJL9TWVQ07hZPEvS
-        f5M3pyn1vl0xC8CxujCK2PNkpNDv5e0Gc3lbNl79V7ELUhBISNL+gO8lfmHMYgsDCdSWxg1HkgokIbX+
-        WidbGEjA1yQNj32GjSLtQBrZwkCC/vsxQyeQJIwg7cCv1XtsYSBB/4f4wZbdgfdsYSAB/4gwWJQwgrQD
-        78AvtphJhkbT/gBgtkhsSm93NwAAAABJRU5ErkJggg==
+        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAAO4SURBVGhD7ZddSFNhGMePGSRdBJVdu02dREERBRWY4LJV
+        c92kToqgr5uUbvqAtl14l5samZhfoSmlRkERqUvqLiKCoi6KsouoqAjKEonU5LxP72PPsX08bZOzc9yF
+        f/iB7H0+fmfnbExlIQtZSOrz2rEKOOg4fSMqLE7VY+ni5BHVY+sUHssOKk+fiMrcNVLuEXhsgHDyiHau
+        llseCk/Oamqf34gyS5GUGtPkEE4eCa+RF/xD3rFtNGZ+IuULUCRcDOHkkeg62TsqynLzaJy5kZ/IDCnw
+        OFoK4eQRrlZ+Zh7QSHMjKq0lnBDCySNcLSIqbcU01ryoFdbLnAzCySNcLTJdbumiseZlsiL3PSeDcPII
+        V4uM77V9pLHmZcpjneJkEE4e4WqRiXLrbxprXjgRDU4e4Wo1aKzx4ZanElpjXLilqYTWGBduaSqhNcan
+        uLgYEAi5daHNobHmRPTnlZ7Yv/VXqi7Ad3DLT9Gbv5vGGx+11/5B7SuA5tPOCJmOI3a4dLQg4rVwuPOO
+        M04QfXZQ+/Pf0XjjIy/gI/TbI0SQtkP50H449nWN/57LWfim0Hjjg4+Q2p/3SR1wiRiZOaIOugS+IaY+
+        QlrUkHuEk5oL6qD7FY0zP2qotJ2TmgtyRguNMz/irruEk5oLYtBt/k/p8MjH6D4nlgyyd5jGzF9EaE+B
+        GnL94ATjIZ/9UXkH5+ffyeiIodIiFOJEOeQ3zzcRchVSe3oEBlw2uLWFFY7g5mYQw24rtaVXoE0B6Ja/
+        +2+sB7jjABhy/QX/vrEOoEeeyRoqT7/MXEASUHn6hZPloPL0SNOlXZ7bnYXPlKD3xdWmteOccDhXZA3W
+        Ys+Fjt0VNMb8dHU5qp72bBybupYPiBL0w+KgF+41W1lxZLA5DzKDvplare9Jz6ax7k7HMRprQmpqspSg
+        r0MT0EApZHndSRi5uCJG/mVLNiwLnpqti+kP+NuVC8eX0BaDUu/PkfLPWQESQ+wNx+B7a9as/NfWpWCr
+        r46o4fvlbNxhSBpqsuWSkfgC/9h+bh9Mty2CqdZM2HbuQMx5nP4R5eyZlbQ1RQElQwn4hsOWxBOYpbrR
+        CVXnd7JnCfoHaHOKUuc7GLUA7Bs2RxB9nogk+j20XWeul2cqtd630QuSEIhLwv5a7xv5hbGILHQk4C2J
+        GS5JKJCA5Pq9DrLQkYCvkRse/QzrhdshOU8WOhL0P4oaOgMnoQduh7wDD8lCR4L+L7GDTbsDn8lCR2r9
+        k8xgVkIP3A55BybIYiFpGkX5Ayv2SCiLoWu/AAAAAElFTkSuQmCC
 </value>
   </data>
-  <data name="toolStripButton_Excluir.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="toolStripButton_Cliente.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAA8xSURBVGhDzVkHWFRXGn1D70NvIm0oQ6/KSgnSq/TeBOxt
-        ARGUWFCxYSyr0diSKEksiQUbCGIEEQsRS0yR6O66MepqXKNRUxSZs/994+i4SWwxZv/vO98r897lnP/+
-        /7l3Bu5ZI36VmUZykzgitUE8P22P49GY9aICui0kKPIP/L9FcDWnNPS0t8/gTvdJuUfdW5LbbO9k7XSV
-        jDzhj/KvwpGyzaonZIXVPHrUnKDEv/T/ECWXfWOKP/XelN8qvpqz21UyvMsPlX+PxLzvMrCidwjeuj+E
-        P86+lo6UrU6SiFXWG1SNODt6VUU6wp8cQz9zbxh7OgCzvk3Bm3cLsVIylCe97F4RlvcU8/cYlvcUYeHt
-        XKRvc5WErLJuNfTW8KHX1QkCfqA/K4pOenRNuziISBfzpKVki7GCRDAhb9G57L7smN3qibB11l/YxAnD
-        aQgtwp8mQpB3zONCzdXkh5lmpN/BCCy4k4tVGI5VkmEPZ2TZPSZCKrDoiB9CN1hdFhfpZdM4ugQFfsRX
-        GcGtnFLyPts7tTcyeVIMbxN53z2W0FurApuNOphxPQ0re4c+zP7SnwfzYDM2+lQwQtda3narMC6j4YwI
-        r9ah8jvFBlktTvcXUbYZQZbpqiuJMKpTg+s2I3jvMEXiYTcSNZIXx55h5Jf8VMBjeU8hJpyNwsC1lj0+
-        c8zm05Cv1qFy2+2cM7Y7S2T1zQTMvJEByw3a8NtljpAmKww5PQBraFaYANkMMPJ/+zGfkEfXBai+lIjQ
-        d6wlvgtM179Sh8rocAnJ2u9K5KSZZQTXUM0P7w5GWIstCrp8sOxBX8iXkEzA4h/ywGaPnc+lUgv/yA6+
-        b5jtF7opvxqHSmizK85r9+QJygSwTLOaZ2Wzmpp4hVz9/5YAhoW3c7DgVhbidojhs9TsC/MozT/eoZJa
-        xVXFR335hYoRk4lgYKRleBJ5KfFsvPF9Fi9g0Z0cpDZ7wO1N08sWWZp/rEN5bzQuSWt2QumXobyryETI
-        C5G/J0/+1wTMv5nJY9GdbBR09If3Wya37UYL/0CHquGytZepIHWPGEM/8SPC0mwzogwy0jIw8gxLfir8
-        VfK1ZADzvkvnseBWJm+zdiuMe8ST9JlD9SG8ZIeaw8VyCzhEbxEhfqcdrbAefGYZcRlZecgyv/B2AZHM
-        IeLZD2tfXgBraIb5NzPIZiPgvdBUIp5mKHMoVekffxkxmQvk5nNI3OmAmHp7EmGPxAYxT4TZo4ywDLKG
-        ZXU+93oWpl1kRDN4AfLk5/wnlTZ/KbS/SqbzFEy5EAff1Rawn6y3X+OlOlQ1506QpDU5I6VJjGQqpYTd
-        DojaKiJyCfxMLP5BRlpaMrKyWXArBzVX0zG+exA9m8xnm4n4XwEMs68lYyYtkAF1VnCo1vlcP1j1JTlU
-        OWfFzeZ60/e5IGu/FNmtLuQiTgjdZEnNHU49UfCQvJT4I8dhmHklDSNPRKLiXBwvggmQka+5msQTn/Hv
-        BDom0L0kRG6xh2i28LJhktpLcKgxnAE1ck9mmzMKD3mQc7ij8LAHwRM5ba4IXt8XQzoH0Ezk8wIYcXm3
-        YRlnqLmagsGHQjC8K4wESLPPIC9g+uVBPGZfS6KZdofVHI3bpgXqv9Ohoqmhqrkf01udMaLLG8OOeRF8
-        eAw/7sOLGbjBCml73flZYNmXJ85qvvaGFLOvpSL3QBAy9vkT8UdlIyNffSmeSi2OP876NoG3Wat5wh6z
-        MZq/aw8lICe6nrDPEcNo21Dc6cmj6AGGfOKFwqMeCNtkTX3h8MAes/ijvNuwmmeYez2FStAf0du8+MZl
-        JcNEyAuY+k0sIYbuxWHUiUDYVOtKzEu01nM6L7aHElAJnQ/fbYuiTzxRcMT9IfIJgw+zcyotEhG+xQZB
-        71kSkQQqo0wS8Ii4rGQY5n2XivyDARiw1pF6KIIXMf3yI/JTLsQ8xLSLsfR9OxQOC/RhVqbeqizintuh
-        2Ax8FlDfF4M7PZBDW+ecQ65SHHZFVqsrstvZuRtyj7giqt4W/Vab0R+N4EUwi2SkZW7Dar7maiLNRDKK
-        jwbBZYkllWEAPZPAz4BMwOSvo/H6v6JQdT6SzqVHlyWmMJqg/oWmr+JzORSbgQ6fTeZE0A2ZHS6gHSoy
-        DjrTkayV3Ch1vxPS6ZxdZx12QcxuETyXGdPKHUAiWO1Lm/Vxx0mk+0m0EodAVGtK64sHX/cs4zLyMgFV
-        5yN4TLkQBb93LCGsVP63TpTyMzsUE9Dk+p4xRh0LwcST6Uhtd0LKATEdxYinNSGh2QHJdJ5M97I7vDD/
-        TAmKDgyE13ITZLTQ9c30x8jLN+3MK4P4n2QsZxmi3xrbB6XEREjJT/pnBCb+IxyVfw/jMeVCJG3J7aFZ
-        qXJHM1mllPgZEp7oUAKv5V4N0zsmoKG5Ah1LM1D9aTES2hyR2EYL2nYRoneJ6NoB2Qd98cGxajRne6N+
-        619R2/k60jaGInabC2VbWj4yq5R3HEa66nw0rOcY8kJY5qdfjqXPo/msT/0migRF0v0IQji9E4XMjz1g
-        UKV+X7NQ+akOJWhZOebcqRgr/EskwD/sFNHQUEZ1G4y4/XYI3WqNkM3WlH0X1H02Cx8HWeKkSA3thgI0
-        9++DteOTfpi5qeSbwHW2RGgQZVxa64y8fNMy16m+FAfHhSbQKFVB2IcOiNjsQIulPUI22pFVixBCCN1k
-        R9ci+swerktNoF+lJtEaprSBHEpEXH/pUPccuZFfOShIbo/0Bd5Mx7UoKxyLtMZbX05HTKsDXttsiYAP
-        LLHqzEy0JLniU7EG8Do9O9QRV14zRIeZErb6u54dW1f0qQeVVMW5cF6E1CofNeyUC1LUXI2HeJExDEo1
-        /6mfptwkzFJrFGYpNwrTlRt10lUJyo1aaYQU5UZNOhIaNLOVdmhEK0wmur/czd4QcWduj/0L8HYeMDUG
-        P40OxGlrJexZmo1xx1Lg/6EFZrVXYN/wAHRZq0Lyuh8wzAW96bboCjFDm5ky3o2PPOrn57fColj7Q8ca
-        A8nwrkASIXUcRl7ecaZdjEFSoysMh6l20p9fRaggjHoCRhKGEpIIjgQ1wqM4Z8ktvxrRF5iTBEwMh6Q0
-        GFcSHHHYQQvvdVajpnM89owLxxFzJfRU9gPGuAM5DugMMccekQbWefWRlIwdu5GGmkpIMcvVWmBUK7yb
-        sc+Lz7Y8edawrHkHH+oP3QnKV8g+ZtI7vgRW42ZPgTGBWevjrrTFnAvvthIAcxNIQBhQPhB3Rw3AGTch
-        9qa7Y8fEWBw2EuDnCVQ2ZT5AvhiX4q1Q76mLvQZKWLQyv9fA2OAdGorZXl+CrUG82gSzarWbUVsdyZGk
-        jsPIyzC+OwRGVRr3BdqCOfS8A4GRYp7/NPwynElVl5vJ99/neVBthxPJIGCsP+4WeuGwiSI6ZOTLKfuD
-        ndGTYYftA0zQYqiAbRXRiF0YK6HWWk5DBRLYCspq1EzbX7Ww72Str/u/3ZevfTYDMrtkrmNWrQVlW8U3
-        6VlvgjLhhUOxc1za8W43bWB6BFASAIyjnhjZD7dSHPAjI15BdV/oAuSJcWBgHzTbqGNHkA0WnZoMxXJF
-        CU3sUhqHEZE1GPNtQxU7xXiTCu0TTouN+O0CW6wqzoWSgEg4LTaGeqDSOnoulKDJXnrREBw8uPX9Qxaq
-        +IlIo5QEjO5PAijr4+i6hI7Frnz2u8lqd7nrosFEDe/SmhHa7AKujJPQUsMy2Y8gb3NsyoVKhlyQySi1
-        JstqoWTUSf+HXh9QZw3NdOVd9Ew6QZ+98MLx/oH3S+tz/dDtKQQqA6Xkh3uTVVJZMfKFzvhPii229TNC
-        s54CNr6RibwDcXDfZQxuPAdqMVZC/oTHHUIqQpMKxN2wSGWdyXjN3pw2L3KiSPra6gLtYSon6PMRBFP2
-        8AvHsbPHpq4eGylp0+bQU0blM4qalSfvxmceBU44HdkXe0yUsGOgHWpPT4PjFgO4bDeAQrkAnA23koYZ
-        SNDgB3w8mAj2Jd5BJ1W5Vm+0+t3Y7U4YcfwvUB2tcp3at4o+s3rw3PPH50ac6eehHmeOGAtwYyhZ5IzX
-        yOcfZH4w1T25DnIdgEwRboaZYpc2zcDkeFR+Mgbi7UZQrCQBjtwaGiqSwGzut4I1qpVmqFK5brnqjX5r
-        +kJ/tFqvQChg/7Ji/v58XytBijuNudyDQu7bM9566J1OxKuo/lnmi6Q1/5B8th2QZQOkW+P7cGNs11LA
-        +uJA1ByfCL1qITh3jjVjPIH9A/BJwTuUmqdCgV6p4nm9iWpQtBMso3v/2z9PDcEpI279x+YKkhuMaE0w
-        LVBUNqxkmNvQPUmOI+5nEfEce8o+kc+0AtJowUuxwN0oY+wWKqAu1BE1W8phn2G/mcZMI+jxoz85mEMZ
-        KNpw8bojVI+rhym+S9dhhCfN3i/juCHXfYtqG5PIImXEC6T1fi/THrsDTXElyoKI2wIZRD6VyCf3ARLN
-        CCZArAHaaRtRZy5E7bTi0zTkEIIJP/jTg9W7Dn2VD1QJU2IrOBPwtNl7LATtutzeSxHm5DhU90wIK5cC
-        Me6mi7AzwBSNlqpo0VfA/QQS8SDzPPlBxkC8IS/gZqgOdtJMLClK+JrGnESw5Ed/tmAiWNNbE+wJz74W
-        dBlyJe163M9XEizJ8yn7rM4J3w6yolXWGI19VLFGnTtbpsw1faSrILkXbSoln/CI/OVAbdQ7qqJOTRFz
-        lpSdpWFnEGwJz+smrC+YSz17E7cIuRXdHjrAeGrYfKpzKpMvI/pgm48B9hrT9tjZ+qK6gPuAmMyrVuW2
-        bNAmERFEPM4IP4bp4rSfFna7qmOTmgArkv2RMjflJA1bTbAhvJgdPk+s1uKCWvW5XuTY4mKMBZr8Keti
-        LTTrCrA52PsrSskGeoztvwPI+7wmK3Hv12kpSG4F6aDRRR31tB58pCFAmYA7MGFh6QGFfIUj9OxEAvPz
-        VxLqW3W4+k4LFRwk4i2U9Z1mOvdWj8s+RZ8x8pUEtrdhzqBK/mZfrsTVrVETSNYqcz0TBVxbkoDbRHay
-        mj6fwnlys+iYR2Db3lcSCn5Eapoat2qGOtccSRmumVXF9iVsQWJfpN0J8r/NqFCRijIE3GxiuIiuFxPK
-        CSkE2tDyX/fEhOezwt8Z/PJOYCSYBeY+OGer4q/9fs9WUuYyQQTSz5cL24Sx+8/fiC8p2OrHSDD/Zj9f
-        yAj9VjCizPr+FLLS4Lj/AnkEhUB3q76qAAAAAElFTkSuQmCC
+        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAA8zSURBVGhDzVkHWJRn1v2G3ofeVNpQhl6VlRKkVxGGXgXs
+        7QdEVGJBxYZB/TUaRZOoSSxZRWwgiCuIWIhYYoqs7q4bo67GNRo1RZE5e99vHB03iS3G7H2e83xlvu/l
+        nPvee953Bu55I6HWQiu5SRyZ0iBelLrX6VjsRlE+3RYSlPkH/tcipJJTGX7Gx3dop8fUnGMeLcltdncz
+        d7pJR58MQNlfIyCps+4JXWW9kB61JKjwL/0vRPEVv9iiT3225LWKr2XvdpOO7PLH5L9FYeG36VjVOwzv
+        PBjGH+ddT4Nkm7M0stZmk7oJZ0+vqslG+INj+GceDePPBGLuNxK8fa8Aq6XDedIr7hdiZU8Rf49hZU8h
+        Ft/JQVqdmzS01qbV2EfLl17XJAj4gf6oKDzl2TXz0mAiXcSTlpEtwioSwYS8Q+fy+/JjVqsXwtfbfGEb
+        L4ygIXQIf5gIQe5xz4tV15IfZZqRfg+jUHM3B7UYiVrpiEczsuI+EyETWHjUH2GbrK+ICw2yaBx9ghI/
+        4uuMkFZOJXm/3d3qmxk8KYZ3ibzfXisYrFOD7WY9zL6RitW9wx9lf/lPQ3mwGRt7OgRh66zuuJebltJw
+        JoTX61B5nWKjzBbnB0so24wgy3TF1SEw2aABt+0m8NlpjiFH3EnUaF4ce4aRX/ZjPo+VPQWYdC4ag9ZZ
+        9fjOt1hEQ75eh8ppt3dJr3eRyuubCZhzMx1Wm3Thv9sSoU3WGHZmINbSrDAB8hlg5P//hzxCLl3no/Ly
+        EIS9ayP1qzHf+FodKr3DNTTzgBuRk2WWEVxLNT+yOwThLXbI7/LFiod9oVhCcgFLv88Fmz12voBKLeLP
+        9vB7y+KA0F319ThUYpt9UW67F09QLoBlmtU8K5s11MSrFOr/1wQwLL6TjZrbmYjfKYbvcosvLKO1f3+H
+        SmoVVxQd8+MXKkZMLoKBkZbjaeRlxLPw1neZvIAld7OR0uwJ97fNr/TN1P59Hcpns2lxarMzSr4M411F
+        LkJRiOI9RfK/JGDRrQweS+5mIb9jAHzeMbtjP1b4OzpUFZelu0INKXvFGP6JPxGWZZsRZZCTloORZ1j2
+        Y8Evkq8mA1j4bRqPmtsZvM2KVpn2iKcaMofqQ3jFDjWfi+NqOMRsEyFhlz2tsJ58ZhlxOVlFyDO/+E4+
+        kcwm4lmPal9RAGtohkW30slmI+FTYy4VzzSWO5S67I+/ipjGBXGLOAzZ5YjYegcS4YAhDWKeCLNHOWE5
+        5A3L6nzBjUzMvMSIpvMCFMnP/3cKbf4ktL9KpnMJpl+Mh9+avnCYZnBA65U6VCXnQZCmNrlA0iRGMpVS
+        4h5HRNeJiFwiPxNLv5eTlpWMvGxqbmej6loaJnYPpmeT+WwzEf8tgGHe9WTMoQUycIM1HCv1PjcMUX9F
+        DlXGWXPzuN60/a7IPCBDVqsruYgzwrZYUXNHUE/kPyIvI/7YcRjmXE3F6JNRKD8fz4tgAuTkq64l8cRn
+        /yuRjol0LwlR2xwgmie8Ypyk8QocahxnRI3ck9HmgoLDnuQcHig44knwQnabG0I29sOwzoE0E3m8AEZc
+        0W1Yxhmqrkkw9HAoRnaFkwBZ9hkUBcy6MpjHvOtJNNMesJ6vdcc8X/M3OlQMNVQl90NaqwtGdflgxHFv
+        gi+PkSd8eTGDNlkjdZ8HPwss+4rEWc1X35Rh3vUU5BwMRvr+ACL+uGzk5CsvJ1CpxfPHud8k8jZrvVDY
+        YzFO+zftoQTkRDcS9zthBG0bijq9eBQ+xLBPvFFwzBPhW2yoLxwf2mMmf1R0G1bzDAtuSKgEAxCz3Ztv
+        XFYyTISigBlfxxFi6V48xpwMgm2lvtSyWGcjp/dyeygBldCFiD12KPzEC/lHPR4hjzD0CDun0iIREdts
+        EfyBFRFJpDLKIAGPictLhmHhtynIOxSIgeucqIcieRGzrjwmP/1i7CPMvBRH37fD4FhjCItSzVZVEffC
+        DsVm4LPA+n4Y2umJbNo6Zx92k+GIGzJb3ZDVzs7dkXPUDdH1dui/xoL+aCQvglkkIy13G1bzVdeG0Ewk
+        o+hYMFyXWVEZBtIzifwMyAVM+yoGb/4zGhUXouhcdnRdZg6TSZpfaPspv5BDsRno8N1iSQTdkdHhCtqh
+        Iv2QCx3JWsmNUg44I43O2XXmEVfE7hHBa4UprdyBJILVvqxZn3ScIXQ/iVbiUIiqzWl98eTrnmVcTl4u
+        oOJCJI/pF6Ph/54VhJNV/6UXrfrcDsUENLl9YIoxx0Mx5VQaUtqdITkopqMYCbQmJDY7IpnOk+leVoc3
+        Fp0tRuHBQfBeaYb0Frq+lfYEecWmnXN1MP+TjNVcY/Rfa/ewlJgIGfmp/4jElL9HYPLfwnlMvxhFW3IH
+        aE9Wu6udrFZC/IwJT3UogfdK74ZZHZPQ0FyOjuXpqPy0CIltThjSRgvaDhFidovo2hFZh/zw0fFKNGf5
+        oL7u/1Dd+SZSN4chbrsrZVtWPnKrVHQcRrriQgxs5hvzQljmZ12Jo89j+KzP+DqaBEXR/UhCBL0TjYy/
+        eMKoQvOBdoHqMx1K0LJ63PnTsdb4p0iAv9sro6GhlOo2BPEH7BFWZ4PQrTaUfVds+Gwu/hJshVMiDbQb
+        C9A8oA/WTUz6fs6W4q+D1tsRocGUcVmtM/KKTctcp/JyPJwWm0GrRA3hHzsicqsjLZYOCN1sT1YtQigh
+        bIs9XYvoMwe4LTeDYYWGVGeEyiZyKBFx/blD3XfiRnc7KknvjPYD3k7D9WhrHI+ywTtfzkJsqyPe2GqF
+        wI+sUHt2DlqS3PCpWAt4k54d7oSrbxijw0IFdQFu58ZvKPzUk0qq/HwEL0JmlY8bdvpFGaquJUC8xBRG
+        Jdr/MExVbRJmajQKM1UbhWmqjXpp6gTVRp1UgkS1UZuOhAbtLJWdWjFK04juz3ezN0Xc2Tvj/wS8mwvM
+        iMWPY4NwxkYFe5dnYcJxCQI+7ou57eXYPzIQXTbqkL7pD4xwRW+aHbpCLdBmoYr3E6KO+fv7r+pbpPux
+        0xwj6ciuIBIhcxxGXtFxZl6KRVKjG4xHqHfSn68llBPGPAWjCcMJSQQnggbhcZy34lZei+wHzE8CpkRA
+        WhKCq4lOOOKogw86K1HVORF7J0TgqKUKeib3B8Z5ANmO6Ay1xF6RFtZ595EWjx+/mYaaQZBY5OjUmFQL
+        76Xv9+azrUieNSxr3qGHB0B/kupVso859I4fgdW4xTNgSmDW+qQrbbPkIrqtBcCCRBIQDpQNwr0xA3HW
+        XYh9aR7YOSUOR0wE+GkSlU2pL5AnxuUEa9R76WOfkQqWrM7tNTI1eo+GYrbXj2BnlKAxyaJS41Z0nRM5
+        ksxxGHk5JnaHwqRC64FAVzCfnnckMFLM85+Fn4cLqepyN/vuu1xPqu0IIhkMjA/AvQJvHDFTRoecfBll
+        f6gLetLtsWOgGVqMlbC9PAZxNXFSaq2VNFQQga2grEYtdAPUC/pN0/lqwLv9+NpnMyC3S+Y6FpU6ULVT
+        fpue9SGoEl46lDsnpJ7odtcFZkUCxYHABOqJ0f1xW+KIHxjxcqr7AlcgV4yDg/qg2VYTO4NtseT0NCiX
+        KUtpYpfTOIyIvMGYbxur2SsnmJXrnnReasJvF9hiVX4+jAREwXmpKTSDVNbTc2EEbfbSy4bg0KG6Dw/3
+        VcePRBolJGDsABJAWZ9A18V0LHLjs99NVrvbQx8NZhp4n9aMsGZXcKWclJYalsn+BEWbY1MuVDHmgs3G
+        aDRZVQqlY04FPPL6wA020E5T3U3PpBEM2QsvHR8e/LCkPscf3V5CYHKQjPxIH7JKKitGvsAF/5bYYXt/
+        EzQbKGHzWxnIPRgPj92m4CZyoBZjJRRAeNIhZCK0qUA8jAvV1puVavdmt3mTE0XR11ZX6I5QO0mfjyKY
+        s4dfOo6fOz6jdnyUtE2XQ08plc8YalaevDufeeQ740xUP+w1U8HOQfaoPjMTTtuM4LrDCEplAnC23Goa
+        ZhBBix/wyWAi2Jd4R70U1WqDsZr34nY4Y9SJP0F9rNoNat8K+sz64XMvHp+bcOafh3mePWoqwM3hZJGz
+        3yCff5j5oVT35DrIcQQyRLgVbo7dujQD0xIw+ZNxEO8wgfJkEuDEraWhogjM5n4tWKNaa4eplOmXqd/s
+        v7YfDMdo9AqEAvYvK+bvL/a1EqS405TLOSTkvjnrY4DeWUS8guqfZb5QVvOPyGfZA5m2QJoNvoswxQ4d
+        JWwsCkLViSkwqBSC8+BYMyYQ2D8Anxa8Q2l4KeUblChfMJiiAWV7wQq699/988wQnDbhNu63VJLeZESr
+        QmiBorJhJcPchu5Js53wIJOIZztQ9ol8hjWQSguepC/uRZtij1AJG8KcULWtDA7pDltpzFSCAT/604M5
+        lJGyLZegP0r9hGa48vt0HU542uz9PE4Yc923qbYxlSxSTjxfVu/3MxywJ8gcV6P7EnE7IJ3IpxD55D7A
+        EAuCGRBnhHbaRmywFKJ6ZtEZGnIYwYwf/NnB6l2PvsoHqYWrsBWcCXjW7D0RgnZ9bt/lSEtyHKp7JoSV
+        S74Y99JE2BVojkYrdbQYKuFBIol4mHme/GBTIMGYF3ArTA+7aCaWFSZ+RWNOJVjxoz9fMBGs6W0IDoTn
+        Xwu6jLnidgPup6uJVuT5lH1W54RvBlvTKmuKxj7qWKvJnStV5Zo+1leS3o8xl5FPfEz+SpAu6p3UsUFD
+        GfOXlZ6jYWcT7Agv6iasL5hLPX8Ttwi5Vd2eesBEatg8qnMqky8j+2C7rxH2mdL22MXmkqaA+4iYLKxU
+        57Zt1CURkUQ83gQ/hOvjjL8O9rhpYouGAKuSAyBZIDlFw1YSbAkvZ4cvEmt0uOBWQ64X2Xa4FNsXTQGU
+        dbEOmvUF2Bri81dKySZ6jO2/A8n7vKepcB+u11GS3g7WQ6OrJuppPfizlgClAu7gpMUlB5XylI7Ss1MI
+        zM9fS2jW6XH1nX3VcIiIt1DWd1no3V8zIes0fcbITyawvQ1zBnXyN4cyFW7DGg2BdJ0q1zNFwLUlCbgt
+        ZCdr6PPpnBc3l465BLbtfS2h5E+kZmpwtbM1ueYoynDV3Aq2L2ELEvsi7UFQ/G1GjYpUlC7g5hHDJXS9
+        lFBGkBBoQ8t/3RMTXswKf2PwyzuBkWAWmPPwnK2Kv/T7PVtJmcsEE0g/Xy5sE8buv3gjvqJgqx8jwfyb
+        /XwhJ/RrwYgy6/tDyMqC4/4D4uSFKo6bvt0AAAAASUVORK5CYII=
 </value>
   </data>
   <data name="toolStripButton_Sair.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
